--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "titrate",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🧪 mixing benchmarks into your workflow",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "tape tests/**.js tests/reporters/**.js",
+    "lint": "standard"
+  },
+  "bin": {
+    "titrate": "./bin/titrate.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gabrielcsapo/titrate.git"
   },
   "author": "Gabriel J. Csapo <gabecsapo@gmail.com>",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/gabrielcsapo/titrate/issues"
   },
-  "homepage": "https://github.com/gabrielcsapo/titrate#readme"
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "glob": "^7.1.3",
+    "woof": "^0.4.0"
+  },
+  "homepage": "https://github.com/gabrielcsapo/titrate#readme",
+  "devDependencies": {
+    "standard": "^12.0.1",
+    "tape": "^4.10.1"
+  }
 }
