--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "titrate",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "🧪 mixing benchmarks into your workflow",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "tape tests/**.js tests/reporters/**.js",
+    "test": "vitest --coverage --run",
     "lint": "standard"
   },
   "bin": {
@@ -20,14 +21,15 @@
     "url": "https://github.com/gabrielcsapo/titrate/issues"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "glob": "^7.1.3",
+    "chalk": "^5.3.0",
+    "fast-glob": "^3.3.1",
     "woof": "^0.4.0"
   },
   "homepage": "https://github.com/gabrielcsapo/titrate#readme",
   "devDependencies": {
+    "@vitest/coverage-v8": "^0.34.4",
     "standard": "^12.0.1",
-    "tape": "^4.10.1"
+    "vitest": "^0.34.4"
   },
   "volta": {
     "node": "18.12.1"
