--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,8 +1,12 @@
 name: Deploy to GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -23,7 +27,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v1
       - uses: volta-cli/action@v1
       - run: cd docs && npm install && npm run build
       - name: Upload artifact
