--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "vitest --coverage --run",
-    "lint": "standard"
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "bin": {
     "titrate": "./bin/titrate.js"
@@ -28,7 +29,7 @@
   "homepage": "https://github.com/gabrielcsapo/titrate#readme",
   "devDependencies": {
     "@vitest/coverage-v8": "^0.34.4",
-    "standard": "^12.0.1",
+    "prettier": "^3.0.3",
     "vitest": "^0.34.4"
   },
   "volta": {
